--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./index.js",
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "bytes": "^3.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "sequelize": "^6.26.0"
   }
