--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
     "bytes": "^3.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
