--- a/.env-example
+++ b/.env-example
@@ -1,28 +1,38 @@
+# APPLICATION SECTION
 
-#APPLICATION SECTION
+# DOCKER
 PORT = 5003
-
-# #DB_SECTION
-# NODE_ENV=development
-# TZ=Asia/Jakarta
-# USER=postgres
-# PASSWORD=admin
-# DATABASE=db_charging2
-# DB_CONNECTION=postgres
-# DB_HOST=localhost
-# DB_PORT_EXPOSE=5432
-
-#DB_SECTION
-NODE_ENV=development
+NODE_ENV=production
 TZ=Asia/Jakarta
-USER=xxx
-PASSWORD=xxx
-# DATABASE=db_charging_test
+USERNAME=user
+PASSWORD=password
 DATABASE=xxx
 DB_CONNECTION=postgres
-DB_HOST=192.168.2.XXX
+DB_HOST=192.xxx.x.xxx
 DB_PORT_EXPOSE=5432
 
+# DEVELOPMENT
+# PORT = 5005
+# NODE_ENV=development
+# TZ=Asia/Jakarta
+# USERNAME=user
+# PASSWORD=password
+# DATABASE=xxx
+# DB_CONNECTION=postgres
+# DB_HOST=192.xxx.x.xxx
+# DB_PORT_EXPOSE=5432
+
+# SERVER
+# PORT = 5005
+# NODE_ENV=production
+# TZ=Asia/Jakarta
+# USERNAME=user
+# PASSWORD=password
+# DATABASE=xxx
+# DB_CONNECTION=postgres
+# DB_HOST=192.xxx.x.xxx
+# DB_PORT_EXPOSE=5432
+
 #URL
-BASE_URL=http://192.168.2.xxx
-# BASE_URL=http://192.168.2.188
+BASE_URL=http://192.xxx.x.xxx
+RECTI_URL=http://192.xxx.x.xxx
