--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
-    "sequelize": "^6.26.0"
+    "sequelize": "^6.26.0",
+    "timelite": "^1.0.0"
   }
 }
